# cyber_scaler

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml
env/: environment.py  graders.py  tasks.py
models/: action.py  observation.py  reward.py
scripts/: benchmark.py  evaluate_env.py  validate-submission.sh
