[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cybersoc-openenv"
version = "0.1.0"
description = "OpenEnv cybersecurity incident response benchmark"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi",
  "uvicorn",
  "pydantic",
  "openai",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
name = "cybersoc-openenv"
openenv_yaml = "openenv.yaml"
app_file = "app.py"
inference_file = "inference.py"
